--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -2,9 +2,9 @@ name: Docker
 
 on:
   workflow_dispatch: {}
-  schedule:
-    - cron: '25 2 * * *'
   push:
+    branches:
+      - main
     tags: [ '*' ]
 
 env:
