--- a/fly.toml
+++ b/fly.toml
@@ -1,26 +1,25 @@
-app = "vaultwarden"
-primary_region = "hkg"
+app = "xvx-vaultwarden"
 kill_signal = "SIGINT"
-kill_timeout = 5
+kill_timeout = "5s"
+primary_region = "hkg"
 
 [build]
-  image = "ghcr.io/webees/vaultwarden"
+image = "ghcr.io/webees/vaultwarden"
 
-[mounts]
-  source = "app_data"
-  destination = "/data"
+[checks.health]
+grace_period = "30s"
+interval = "15s"
+method = "get"
+path = "/alive"
+port = 80
+timeout = "10s"
+type = "http"
 
 [http_service]
-  internal_port = 80
-  force_https = true
-  min_machines_running = 1
+force_https = true
+internal_port = 80
+min_machines_running = 1
 
-[checks]
-  [checks.health]
-    grace_period = "30s"
-    interval = "15s"
-    method = "get"
-    path = "/alive"
-    port = 80
-    timeout = "10s"
-    type = "http"
+[[mounts]]
+destination = "/data"
+source = "app_data"
