--- a/.github/workflows/ghcr-clean.yml
+++ b/.github/workflows/ghcr-clean.yml
@@ -17,7 +17,7 @@ jobs:
         uses: dataaxiom/ghcr-cleanup-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          packages: ${{ github.repository }}
+          packages: ${{ github.event.repository.name }}
           delete-untagged: true
           older-than: 30 days
           delete-ghost-images: true
