refactor: rename DOMAINS to CADDY_DOMAINS for clarity

--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-# Your domain name without protocol
-# If you don't have your own domain (highly recommended)
-# comment this out for first deployment, add your fly.dev domain here
-# then reset your secrets and redeploy your app (untested)
-DOMAIN_NAME=domain.name.com
+# Caddy domain(s)
+# Catch-all: :80
+# Specific:  example.com:80 example.org:80
+CADDY_DOMAINS=":80"
 
 ###################
 # E-mail settings #
@@ -40,10 +39,8 @@ AWS_SECRET_ACCESS_KEY=88888888
 # https://github.com/dani-garcia/vaultwarden/wiki/Configuration-overview#configuration-options
 
 # Check https://github.com/dani-garcia/vaultwarden/wiki/Configuration-overview#setting-the-domain-url
-# If you don't have your own domain (highly recommended)
-# comment this out for first deployment, add your fly.dev domain here
-# then reset your secrets and redeploy your app (untested)
-DOMAIN=https://{$DOMAIN_NAME}
+# Vaultwarden requires full URL with protocol
+DOMAIN=https://vault.example.com
 
 # Check https://github.com/dani-garcia/vaultwarden/wiki/Disable-registration-of-new-users
 SIGNUPS_ALLOWED=false
